MDEV-25717 Assertion `owning_thread_id_ == wsrep::this_thread::get_id()'

A test case to reproduce the issue. The actual fix is in galera
library.

Reviewed-by: Jan Lindström <jan.lindstrom@mariadb.com>